--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Play -- Juvenile fiction'
 - !lcsh 'Diamond jewelry -- Juvenile fiction'
+- GITenberg
 title: 'The Girls and I: A Veracious History'
 url: http://www.gutenberg.org/ebooks/31007
